third_party/move/move-compiler/tests/move_check/control_flow/break_continue_outside_loop.exp
error[E04014]: invalid loop control
  ┌─ tests/move_check/control_flow/break_continue_outside_loop.move:3:2
  │
3 │     break;
  │     ^^^^^ Invalid usage of 'break'. 'break' can only be used inside a loop body

error[E04014]: invalid loop control
  ┌─ tests/move_check/control_flow/break_continue_outside_loop.move:7:2
  │
7 │     continue;
  │     ^^^^^^^^ Invalid usage of 'continue'. 'continue' can only be used inside a loop body

